<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AsposeConverterActivity" 
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse_location_1" 
        android:textStyle="bold"/>
    
    <TextView
        android:id="@+id/input_path_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <Button 
        android:id="@+id/btn_browse_file1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse" 
        android:layout_gravity="right"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse_location_2" 
        android:textStyle="bold"/>
    
    <TextView
        android:id="@+id/input_path_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <Button 
        android:id="@+id/btn_browse_file2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse" 
        android:layout_gravity="right"/>
    
    <Button 
        android:id="@+id/btn_concat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/concat" 
        android:enabled="false"/>
    
    <TextView 
        android:id="@+id/tv_result_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/outcome" 
        android:textStyle="bold"/>
    
    <TextView 
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>